# dqn2013-reproduction

./: .gitignore  AGENTS.md  CITATION.cff  CURRENT_STATE.md  DEVLOG.md  LICENSE  MIGRATION.md  PLAN.md  README.md  REPRODUCING.md  RESULTS_SCOREBOARD.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml
LICENSES/: CleanRL-MIT.txt
ci/: github-actions-verify.yml
configs/: dqn2013_breakout_s0_0717.json  dqn2013_exp0002_fixed_seed_eval.json  dqn2013_exp0003_unitfix_1p5m_s0.json  exp0006_dqn_calibration.json  exp0007_dqn_calibration_300k.json  exp0008_dqn_visual_intervention.json  nature2015_table3_s0_formal_10m.json  nature2015_table3_s0_pilot_250k.json
discussion/: INDEX.md  README.md
docs/: DQN2013_REPRODUCTION_GUIDE.md
references/: CLAIM_PROTOCOL_MATRIX.md  DQN2013_PROTOCOL_AUDIT.md  DQN_OFFLINE_ANALYSIS_PROTOCOL.md  IMPLEMENTATION_LEDGER.md  INDEX.md  NATURE2015_PROTOCOL_AUDIT.md
reports/: DQN_REPRODUCTION_REPORT.md  RELEASE_NOTES_v0.1.0.md
requirements/: verified.txt
research/: artifacts.jsonl  claims.jsonl  experiments.jsonl  insights.jsonl  profile.yaml  project_state.yaml  repositories.yaml  tasks.jsonl
scripts/: analyze_dqn2013_unitfix.py  analyze_nature2015_table3.py  build_dqn2015_calibration_review.py  build_dqn2015_local_mechanism_synthesis.py  build_dqn2015_offline_atlas.py  build_dqn2015_visual_review.py  collect_dqn2015_calibration_trajectories.py  evaluate_dqn2013_checkpoint.py  evaluate_dqn2015_checkpoint.py  extract_dqn2015_offline_panel.py  plot_dqn2013_breakout.py  plot_dqn2013_fixed_seed_eval.py  reproduce.sh  run_nature2015_config.py  (+3 more)
(+44 files in other folders)
